erDiagram
    USERS {
        int id PK
        varchar nombre
        varchar apellido
        varchar email UK
        varchar password
        enum rol "admin, recepcion, entrenador, nutricionista"
        boolean activo
        datetime last_login
        datetime created_at
        datetime updated_at
    }
    MEMBERS {
        int id PK
        varchar nombre
        varchar apellido
        varchar email UK
        varchar dni UK
        date fecha_nacimiento
        varchar telefono
        varchar contacto_emergencia
        varchar domicilio
        datetime fecha_registro
        enum estado "activo, inactivo, suspendido"
        datetime created_at
        datetime updated_at
    }
    MEMBERSHIP_TYPES {
        int id PK
        varchar nombre
        decimal precio
        int duracion_dias
        text descripcion
        boolean activo
        datetime created_at
        datetime updated_at
    }
    MEMBERSHIPS {
        int id PK
        int member_id FK
        int membership_type_id FK
        date fecha_inicio
        date fecha_vencimiento
        enum estado "activa, vencida, pausada, cancelada"
        int dias_pausados
        date fecha_pausa_inicio
        date fecha_pausa_fin
        decimal precio_pagado
        datetime created_at
        datetime updated_at
    }
    PAYMENTS {
        int id PK
        int member_id FK
        int membership_id FK
        decimal monto
        enum metodo_pago "efectivo, transferencia, tarjeta_debito, tarjeta_credito"
        datetime fecha_pago
        text concepto
        enum estado "completado, pendiente, cancelado"
        varchar comprobante_numero
        datetime created_at
        datetime updated_at
    }

    PRODUCTS {
        int id PK
        varchar nombre
        text descripcion
        decimal precio
        int stock_actual
        int stock_minimo
        varchar categoria
        varchar codigo_barras
        boolean activo
        datetime created_at
        datetime updated_at
    }
    SALES {
        int id PK
        int member_id FK
        decimal total
        enum metodo_pago "efectivo, transferencia, tarjeta_debito, tarjeta_credito"
        enum estado "completada, pendiente_retiro, cancelada"
        datetime fecha_venta
        text observaciones
        datetime created_at
        datetime updated_at
    }
    SALE_ITEMS {
        int id PK
        int sale_id FK
        int product_id FK
        int cantidad
        decimal precio_unitario
        decimal subtotal
        datetime created_at
    }

    TRAINERS {
        int id PK
        varchar nombre
        varchar apellido
        varchar email UK
        varchar telefono
        text especialidades
        text biografia
        boolean activo
        datetime created_at
        datetime updated_at
    }
    CLASS_TYPES {
        int id PK
        varchar nombre
        text descripcion
        int duracion_minutos
        int capacidad_maxima
        boolean activo
        datetime created_at
        datetime updated_at
    }
    CLASSES {
        int id PK
        int class_type_id FK
        int trainer_id FK
        date fecha
        time hora_inicio
        time hora_fin
        int capacidad_maxima
        enum estado "programada, en_curso, completada, cancelada"
        text observaciones
        datetime created_at
        datetime updated_at
    }
    CLASS_RESERVATIONS {
        int id PK
        int class_id FK
        int member_id FK
        datetime fecha_reserva
        enum estado "confirmada, en_espera, cancelada, no_asistio"
        boolean es_lista_espera
        datetime created_at
        datetime updated_at
    }
    ATTENDANCES {
        int id PK
        int member_id FK
        int class_id FK
        datetime fecha_entrada
        datetime fecha_salida
        enum tipo "libre, clase"
        text observaciones
        datetime created_at
    }
    MEMBER_NOTES {
        int id PK
        int member_id FK
        int user_id FK
        text nota
        boolean visible_cliente
        datetime fecha_nota
        datetime created_at
        datetime updated_at
    }

    USERS {
        int id PK
        varchar nombre
        varchar apellido
        varchar email UK
        varchar password
        enum rol "admin, recepcion, entrenador, nutricionista"
        boolean activo
        datetime last_login
        datetime created_at
        datetime updated_at
    }
    NOTIFICATIONS {
        int id PK
        int member_id FK
        varchar titulo
        text mensaje
        enum tipo "pago_vencido, renovacion, promocion, clase_cancelada"
        enum canal "email, sms, app"
        datetime fecha_envio
        boolean leido
        datetime created_at
    }
    EXPENSES {
        int id PK
        decimal monto
        varchar concepto
        varchar categoria
        date fecha_gasto
        varchar comprobante_numero
        int user_id FK
        text observaciones
        datetime created_at
        datetime updated_at
    }

    USERS ||--o{ MEMBER_NOTES : "escribe"
    MEMBERS ||--o{ MEMBER_NOTES : "tiene"
    MEMBERS ||--o{ NOTIFICATIONS : "recibe"
    
    MEMBERS ||--o{ MEMBERSHIPS : "tiene"
    MEMBERSHIP_TYPES ||--o{ MEMBERSHIPS : "define"
    MEMBERS ||--o{ PAYMENTS : "realiza"
    MEMBERSHIPS ||--o{ PAYMENTS : "paga"
    
    MEMBERS ||--o{ SALES : "compra"
    SALES ||--o{ SALE_ITEMS : "contiene"
    PRODUCTS ||--o{ SALE_ITEMS : "incluye"
    
    TRAINERS ||--o{ CLASSES : "imparte"
    CLASS_TYPES ||--o{ CLASSES : "define"
    CLASSES ||--o{ CLASS_RESERVATIONS : "tiene"
    MEMBERS ||--o{ CLASS_RESERVATIONS : "reserva"
    MEMBERS ||--o{ ATTENDANCES : "registra"
    CLASSES ||--o{ ATTENDANCES : "incluye"
    
    USERS ||--o{ EXPENSES : "registra"